<resources>
    <string name="app_name">To Do List</string>
    <string name="action_settings">Settings</string>
    <string name="task_title_label">Title:</string>
    <string name="task_detail_label">Details:</string>
    <string name="task_time_label">Time:</string>
    <string name="task_Location_label">Location:</string>
    <string name="task_location_content">Home</string>
    <string name="need_remind">Need Remind?</string>
    <string name="delete_task">Delete Task</string>
    <string name="date_time_picker_title">Set Reminder time</string>
    <string name="location_setting">Location Setting</string>
    <string name="task_title_hint">Enter a title for the task</string>
    <string name="task_detail_hint">Enter details of the task</string>
    <string name="reminder_type_label">Set Reminder Type</string>
    <string name="Abouts">Abouts</string>
    <string name="no_task">Press \"+\" to create a task.</string>
    <string name="done_button">Done</string>
    <string name="task_importance">Task importance</string>
    <string name="date_time_setting">Date and Time Setting</string>
    <string name="location_setting_title">Location Setting</string>
    <string name="location_title_hint">Enter a title for this location</string>
    <string name="location_detail_hint">Enter detail of the location</string>
    <string name="location_type_label">Set Location Type</string>
    <string name="use_current_wifi_label">Use Current Wi-Fi location</string>
    <string name="wifi_advanced_settings">Wi-Fi Location Advanced Settings</string>
    <string name="gps_location_setting">Use Place Picker</string>
    <string name="location_setting_label">Set Location</string>
    <string name="no_location">Press \"+\" to add a new location</string>
    <string name="list_based_on_gps">GPS:  %1$s.</string>
    <string name="list_based_on_wifi">Wi-Fi:  %1$s.</string>
    <string name="list_based_on_gpscoordinate">GPS:  %1$.5f  %2$.5f.</string>
    <string name="delete_location">Delete Location</string>
    <string name="location_arriving">When Arriving: </string>
    <string name="location_leaving">When Leaving: </string>
    <string name="shortcut_location_setting">Go to Location Setting</string>

    <!--Permissions-->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>


    <string-array name="reminder_type_array">
        <item>None</item>
        <item>Time</item>
        <item>Location(Arriving)</item>
        <item>Location(Leaving)</item>
    </string-array>
    <string-array name="location_type_array">
        <item>GPS</item>
        <item>Wi-Fi</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="no_wifi_connection_warning">You don\'t have any current Wi-Fi connection.</string>
    <string name="enter_location_hint">Enter location address</string>
    <string name="wifi_info">Wi-Fi SSID:  %1$s\nWi-Fi BSSID: %2$s</string>
    <string name="gps_coordinate_info">GPS (%1$.6f, %2$.6f)</string>
</resources>
